part1/ex1.08/project/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: project-svc
spec:
  type: ClusterIP
  selector:
    app: project 
  ports:
    - port: 2347
      protocol: TCP
      targetPort: 8080
