part1/ex1.08/project/manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: project-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: project-svc
          servicePort: 2347
